# Forge-Loop

./: .gitignore  CLAUDE.md  README.md
docs/: cli.md  (+18 more)
services/api/: .dockerignore  .env.example  Dockerfile  docker-compose.local.yml  prometheus.yml  pyproject.toml
services/api/app/: auth.py  cli.py  config.py  firestore_repo.py  lifecycle.py  main.py  models.py  planning_agent.py  pr_draft.py  repositories.py  repositories_mongo.py  repositories_state.py  requirement_analysis_agent.py  requirement_generation_agent.py  task_decomposition_agent.py
services/api/app/ci_analysis/: agent.py
services/api/app/incident_triage/: agent.py
services/api/tests/: conftest.py  test_agent_failures.py  test_aider_execution.py  test_aider_workflow.py  test_approvals.py  test_architecture_decisions.py  test_architecture_reviews.py  test_artifact_storage.py  test_artifact_summaries.py  test_assignment.py  test_audit_action_coverage.py  test_audit_events.py  test_auth.py  test_auth_protected_smoke.py  test_auto_remediation.py  test_backups.py  test_budget_controls.py  test_cache_provider.py  test_check_execution.py  test_checks.py  test_ci_analyses.py  test_ci_events.py  test_cli.py  test_cli_phase_97.py  test_cloud_compatibility.py  test_code_repositories.py  test_commands.py  test_config.py  test_context_packs.py  test_contextpack_builder.py  test_contextpack_enforcement.py  test_cost_budget_wiring.py  test_cost_records.py  test_cost_reporting.py  test_dev_task_lifecycle.py  test_draft_pr_pipeline.py  test_epics.py  test_evaluation_trials.py  test_event_bus.py  test_experiments.py  (+73 more)
(+280 files in other folders)
