[project]
name = "incidentpilot-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "openai>=1.0",
    "google-cloud-firestore>=2.16",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "mongomock>=4.1",
]
local_document = [
    "pymongo>=4.7",
]
cache = [
    # Task 79: optional Valkey/Redis backend for the cache /
    # ephemeral-state abstraction. Lazily imported and only when
    # CACHE_PROVIDER=redis|valkey; ForgeLoop + tests run without it.
    "redis>=5",
]
observability = [
    # C2: Langfuse backend. Pinned <3 — the provider uses the v2
    # client.generation() API (v3 reworked it). Optional + lazily
    # imported; ForgeLoop runs fine without it (provider no-ops).
    "langfuse>=2,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
